k8s/consumer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer-1
  template:
    metadata:
      labels:
        app: consumer-1
    spec:
      containers:
        - name: consumer
          image: 355653384852.dkr.ecr.ap-northeast-2.amazonaws.com/kafka-consumer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer-2
  template:
    metadata:
      labels:
        app: consumer-2
    spec:
      containers:
        - name: consumer
          image: 355653384852.dkr.ecr.ap-northeast-2.amazonaws.com/kafka-consumer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer-3
  template:
    metadata:
      labels:
        app: consumer-3
    spec:
      containers:
        - name: consumer
          image: 355653384852.dkr.ecr.ap-northeast-2.amazonaws.com/kafka-consumer
