k8s/kafka.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-1
spec:
  type: ClusterIP
  selector:
    app: kafka-1
  ports:
    - name: plaintext
      port: 29092
      targetPort: 29092
    - name: controller
      port: 9093
      targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-1
  template:
    metadata:
      labels:
        app: kafka-1
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.9.0
          ports:
            - name: plaintext
              containerPort: 29092
            - name: controller
              containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-2
spec:
  type: ClusterIP
  selector:
    app: kafka-2
  ports:
    - name: plaintext
      port: 29092
      targetPort: 29092
    - name: controller
      port: 9093
      targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-2
  template:
    metadata:
      labels:
        app: kafka-2
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.9.0
          ports:
            - name: plaintext
              containerPort: 29092
            - name: controller
              containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-3
spec:
  type: ClusterIP
  selector:
    app: kafka-3
  ports:
    - name: plaintext
      port: 29092
      targetPort: 29092
    - name: controller
      port: 9093
      targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-3
  template:
    metadata:
      labels:
        app: kafka-3
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.9.0
          ports:
            - name: plaintext
              containerPort: 29092
            - name: controller
              containerPort: 9093
