k8s/monitor.yml
apiVersion: v1
kind: Service
metadata:
  name: monitor
spec:
  type: ClusterIP
  selector:
    app: monitor
  ports:
    - port: 80
      targetPort: 8085
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      containers:
        - name: monitor
          image: 355653384852.dkr.ecr.ap-northeast-2.amazonaws.com/kafka-monitor
          ports:
            - containerPort: 8085
