k8s/producer.yml
apiVersion: v1
kind: Service
metadata:
  name: producer
spec:
  type: ClusterIP
  selector:
    app: producer
  ports:
    - port: 80
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: 355653384852.dkr.ecr.ap-northeast-2.amazonaws.com/kafka-producer
          ports:
            - containerPort: 8081
