k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafkalab
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:355653384852:certificate/1451d424-a5ad-4973-af12-1733649a87e5
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/stream
            pathType: Prefix
            backend:
              service:
                name: monitor
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: producer
                port:
                  number: 80
